--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ IEEE International Symposium on Mixed and Augmented Reality (ISMAR), accepted (p
 <a href="./papers/ISMR2020.pdf">[PDF]</a></div></div>
 </br>
    
-<div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"><img src="./images/CGF2020.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div> <a href="https://www.youtube.com/watch?v=d2vB5rHMZxY"><img src="./images/CGF2020.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>Accelerating Liquid Simulation With an Improved Data-Driven Method</strong>.<br />
 <u>Yang Gao*</u>, Quancheng Zhang, Shuai Li, Hong Qin and Aimin Hao.  <br />
 Computer Graphics Forum, 39(6): 180-191, 2020.
