--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=2, maximum-scale=2">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <!--link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <!--link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <!--link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen"-->
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
     <!--[if lt IE 9]>
@@ -85,7 +85,7 @@
 Shuwei Chen, Ben Hu, <u>Yang Gao*</u>, Zhiping Liao, Jianhua Li and Aimin Hao.  <br />
 IEEE International Symposium on Mixed and Augmented Reality (ISMAR), accepted (poster).
 <a href="./papers/ISMR2020.pdf">[PDF]</a></div></div>
-</br>
+</br></br>
    
 <div> <a href="https://www.youtube.com/watch?v=d2vB5rHMZxY"><img src="./images/CGF2020.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>Accelerating Liquid Simulation With an Improved Data-Driven Method</strong>.<br />
