--- a/index.html
+++ b/index.html
@@ -79,9 +79,6 @@
  <b>News</b></br>
 <div class="news">
   <!-- <h4><b>News</b></h4> -->
-  <!-- <div><h5 style="font-family: Helvetica Neue,Source Sans Pro,Arial"><b>News</b></h5></div> -->
-
-  <!-- 
 
   <table>
     <tbody>
@@ -118,7 +115,7 @@
 
 <b>2021</b></br>
 
-<div> <a href="https://www.gaoyangvr.github.io"><img src="./images/TVCG21.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div> <a href="https://www.gaoyangvr.github.io"><img src="./images/APIC_FLIP_PIC.pdf" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>Simulating Multi-scale, Granular Materials and Their Transitions with a Hybrid Euler-Lagrange Solver</strong>.<br />
 <u>Yang Gao<u>, Shuai Li, Aimin Hao and Hong Qin*.  <br />
  IEEE Transactions on Visualization and Computer Graphics, to appear.
