--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 <b>2021</b></br>
 
-<div> <a href="https://www.gaoyangvr.github.io"><img src="./images/APIC_FLIP_PIC.pdf" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div> <a href="https://www.gaoyangvr.github.io"><img src="./images/TVCG21.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>Simulating Multi-scale, Granular Materials and Their Transitions with a Hybrid Euler-Lagrange Solver</strong>.<br />
 <u>Yang Gao<u>, Shuai Li, Aimin Hao and Hong Qin*.  <br />
  IEEE Transactions on Visualization and Computer Graphics, to appear.
@@ -129,7 +129,7 @@
 <a href="https://www.gaoyangvr.github.io">[PDF]</a></div></div>
 </br></br>
 
-<div> <a href="https://www.gaoyangvr.github.io"><img src="./images/ISMAR21-C.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div> <a href="https://www.gaoyangvr.github.io"><img src="./images/ISMAR21-C.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>Analysis and Validation for Kinematic and Physiological Data of VR Training System</strong>.<br />
 Shuwei Chen, Ben Hu, <u>Yang Gao*<u>, Zhiping Liao, Yang Liu, Jianhua Li and Aimin Hao*.  <br />
  IEEE International Symposium on Mixed and Augmented Reality (ISMAR)- Adjunct, accept.
