--- a/index.html
+++ b/index.html
@@ -103,6 +103,19 @@
 
   <table>
     <tbody>
+      <tr>
+        <td>      •    <em>2021/09</em>     </td>
+        <td>    I will serve as committee of IEEE VR 2023.</td>
+      </tr>
+      <tr>
+        <td>      •    <em>2022/06</em>     </td>
+        <td>    Two works are accepted to ISMAR 2022, one TVCG journal paper and one conferrence paper.</td>
+      </tr>
+      <tr>
+        <td>      •    <em>2022/04</em>     </td>
+        <td>     I will serve as a reviewer on the Conference of ISMAR2021.</td>
+      </tr>
+
   <tr>
         <td>      •    <em>2021/09</em>     </td>
         <td>    I will serve as the question-master the GAMES VR interaction (Sept. 09).</td>
@@ -137,7 +150,14 @@
 
 <p><strong>Publications and Presentations</strong></p>
 
+</br></br>
 
+<b>2022</b></br>
+<div> <a href="https://www.gaoyangvr.github.io"><img src="./images/TVCG_LM2022.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div><strong>Neurophysiological and Subjective Analysis of VR Emotion Induction Paradigm</strong>.<br />
+ Ming Li; Junjun Pan; <u>Yang Gao*<u>; Yang Shen; Fang Luo; Ju Dai; Aimin Hao; Hong Qin.  <br />
+ IEEE Transactions on Visualization and Computer Graphics.
+<a href="https://ieeexplore.ieee.org/abstract/document/9873987">[PDF]</a></div></div>
 </br></br>
 
 <b>2021</b></br>
